# starter-code-opendataswiss-gh

./: .gitignore  README.md  config.yaml  environment.yml  pyproject.toml  updater.py
.github/workflows/: autoupdater.yml
_templates/: template_md_header.md  template_md_readme.md  template_python.ipynb  template_rmarkdown.Rmd
_work/: README.md  index.md
