[project]
name = "starter-code-opendataswiss-gh"
version = "0.1.0"
description = "Generate starter code for opendata.swiss datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.scripts]
updater = "updater:main"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
